# SvrCallImageEngine

./: .gitignore  10.dcm  CMakeLists.txt  main.cpp  start_vscode.sh  unit_test.sh
DicomEngine/api/: api.h  autoptr.cpp  autoptr.h  globals.h  iexception.cpp  iexception.h  ilock.cpp  ilock.h  studycontextmy.cpp  studycontextmy.h
DicomEngine/api/dicom/: dcmdictionary.h  dcmuiddictionary.h  dicomdataset.cpp  dicomdataset.h  idicom.cpp  idicom.h  idicommanager.h
DicomEngine/io/: ct_image_generator.h  ct_image_storage_sop_generator.cpp  dicom_attribute.h  dicom_writer_dcmtk.cpp  dicom_writer_dcmtk.h  idicom_writer.h  igenerator.cpp  igenerator.h  img_source.h  secondary_capture_image_generator.cpp  secondary_capture_image_generator.h
DicomEngine/iod/: ct_image_module.h  frame_of_reference_module.h  general_equipment_module.h  general_image_module.h  general_series_module.h  general_study_module.h  get_set.h  image_pixel_module.h  image_plane_module.h  meta_info_module.h  modality_lut_module.h  module.h  patient_module.h  patient_study_module.h  sc_equipment_module.h  sc_image_module.h  sop_common_module.h  voi_lut_module.h
DicomEngine/main/controllers/: dicommanager.cpp  dicommanager.h
EngineController/: Controller.cpp  Controller.h  common_utils.cpp  common_utils.h  data_transfer_control.cpp  data_transfer_control.h  dcmtk_dcm_loader.cpp  dcmtk_dcm_loader.h  dicom_data_info.cpp  dicom_data_info.h  ginkgouid.cpp  ginkgouid.h  global_define.h  image_data_info.cpp  image_data_info.h  image_process.cpp  image_process.h  img_source.h  series_data_info.cpp  series_data_info.h
ImagingEngineLib/: CMakeLists.txt  ImagingEngineLib.vcxproj  ImagingEngineLib.vcxproj.filters  curve_source.cpp  data_source.cpp  render_facade.cpp  render_manager.cpp  render_source.cpp
ImagingEngineLib/actor/: pick_point.cpp  rotate_cpr.cpp  rotate_vr.cpp  window_width_level.cpp
ImagingEngineLib/batch/: CMakeLists.txt  batch_generator_cpr.cpp  batch_generator_mpr.cpp  batch_generator_vr.cpp  batch_image_source.cpp
ImagingEngineLib/bitmap/: BasicBitmap.cpp  CMakeLists.txt  bitmap.cpp  bitmap_info.cpp
ImagingEngineLib/builder/: CMakeLists.txt  imaging_builder_3d.cpp  imaging_builder_cpr.cpp  imaging_builder_mpr.cpp  imaging_builder_vr.cpp
ImagingEngineLib/control/: CMakeLists.txt  image_control_2d.cpp  image_control_3d.cpp
ImagingEngineLib/data/: CMakeLists.txt  aabb.cpp  anatomical_plane.cpp  camera.cpp  curve_line.cpp  data_loader.cpp  dicom_format_converter.cpp  image_orientation.cpp  image_plane.cpp  light.cpp  orthogonal_plane.cpp  patient_orientation.cpp  pixel_data.cpp  show_buffer.cpp  vol_data.cpp  window_level.cpp
ImagingEngineLib/exception/: iexception.cpp
ImagingEngineLib/filter/: CMakeLists.txt  manual_orientation_markder_widget.cpp  spline_driven_image_slicer.cpp
ImagingEngineLib/include/: annotation_facade.h  curve_source.h  data_source.h  render_facade.h  render_source.h  vtk_include.h
ImagingEngineLib/include/actor/: actor_3d.h  batch_vr.h  pan_mpr.h  pick_point.h  rotate_cpr.h  rotate_vr.h  window_width_level.h
ImagingEngineLib/include/batch/: batch_generator.h  batch_generator_cpr.h  batch_generator_mpr.h  batch_generator_vr.h  batch_image_source.h
ImagingEngineLib/include/bitmap/: bitmap.h  bitmap_info.h  ibitmap.h  ibitmap_info.h
ImagingEngineLib/include/builder/: imaging_builder_3d.h  imaging_builder_cpr.h  imaging_builder_mpr.h  imaging_builder_vr.h
ImagingEngineLib/include/control/: image_control.h  image_control_2d.h  image_control_3d.h
ImagingEngineLib/include/data/: Image_slice.h  aabb.h  anatomocal_plane.h  blend_mode.h  (+21 more)
ImagingEngineLib/io/: CMakeLists.txt  nii_loader.cpp
ImagingEngineLib/orientation/: CMakeLists.txt  orientation_interpreter.cpp  orientation_marker.cpp
ImagingEngineLib/processing/: CMakeLists.txt  image_process.cpp  image_transform_opencv.cpp  stored_value_transform.cpp  voi_lut.cpp
ImagingEngineLib/render/: CMakeLists.txt  imaging_3d.cpp  imaging_cpr.cpp  imaging_mpr.cpp  imaging_vr.cpp  render_param_cpr.cpp  render_param_mpr.cpp  render_param_vr.cpp  renderer_3d.cpp  renderer_cpr.cpp  renderer_mpr.cpp  renderer_mpr_vtk.cpp  renderer_raycasting_cpu.cpp  renderer_raycasting_gpu.cpp  renderer_straightened_cpr.cpp  renderer_stretched_cpr.cpp  renderer_vr.cpp  transfer_function.cpp  transfer_function_color.cpp  transfer_function_opacity.cpp
ImagingEngineLib/thread/: CMakeLists.txt
ImagingEngineLib/tools/: CMakeLists.txt  configurations.cpp  convert_vtk_image_data_to_rgba.cpp  math.cpp  vtk_image_data_creator.cpp
SvrJava/: SvrCallImageEngine.cpp  SvrCallImageEngine.java  com_deepwise_cta_component_rebuild_SvrCallImageEngine.cpp
(+54 files in other folders)
